--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.4",
     "fullpage-vue": "^2.0.0",
     "vue": "^2.6.11",
+    "vue-analytics": "^5.22.1",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.1.6",
     "vue-scrollto": "^2.17.1"
