--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "animate.css": "^3.7.2",
     "core-js": "^3.6.4",
     "fullpage-vue": "^2.0.0",
+    "img-vuer": "^0.19.2",
     "vue": "^2.6.11",
     "vue-analytics": "^5.22.1",
-    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.1.6",
-    "vue-scrollto": "^2.17.1"
+    "vue-scrollto": "^2.17.1",
+    "vue-tiny-lazyload-img": "^0.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
